--- a/01-recut/index.html
+++ b/01-recut/index.html
@@ -196,6 +196,7 @@
         </p>
         <p>
           <img
+                  style="width: 100%"
             class="max-w-md mx-auto shadow-lg"
             src="./assets/automatically-remove-silence-davinci-resolve.png"
             alt="Automatically remove silence from videos and export the cut list to DaVinci Resolve"
