Exercise 2: Warp and Weave

--- a/02-warp-and-weave/index.html
+++ b/02-warp-and-weave/index.html
@@ -7170,9 +7170,10 @@
                             >
                               <div class="tcb-col" style="">
                                 <div
+
                                   class="thrv_wrapper thrv_contentbox_shortcode thrv-content-box tve-elem-default-pad"
                                   data-css="tve-u-5fac42ce99a412"
-                                  style=""
+                                  style="max-width: 100%"
                                 ></div>
                               </div>
                             </div>
